[tool.poetry]
name = "causallib"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9, <3.11"
pandas = "^1.3.4"
scipy = "^1.7.3"
statsmodels = "^0.13.1"
scikit-learn = "^1.0.1"
matplotlib = "^3.5.0"
networkx = "^2.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
